Fixed issue where PokeBall in flipped cards was animated and off center

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -31,12 +31,7 @@
   height: 100%;
 }
 
-.cardBall {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+
 
 .cardFront {
   background-color: rgba(0, 0, 0, 0.5);
@@ -47,6 +42,8 @@
   background-color: rgb(48, 100, 110);
   transform: rotateY(180deg);
   backface-visibility: hidden;
+  display: grid;
+  place-items: center;
 }
 
 
